@@ -4,6 +4,9 @@ compiz (1:0.9.12.2+16.04.20160714-0ubuntu2) UNRELEASED; urgency=medium
   * Don't activate expo if not needed (1x1 setup) (LP: #1606254)
   * Don't crash if gsettings key is not found. Default value will be
     used. (LP: #1044662)
+  * focusDefaultWindow: focus Most Recently Used (MRU) window and
+    fallback to the top window in case MRU list is not available. (LP:
+    #1073488, LP: #1459671)
 
   [ Marco Trevisan (Treviño) ]
   * Unity MigrationScript: sync gsettings on exit, and only use dconf on
